<resources>
    <string name="Control_gestures">Try control gestures:</string>
    <string name="Folders">Folders</string>
    <string name="_current_chapter">Current chapter</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="add_catalog">Add new catalog</string>
    <string name="add_catalog_failed">Failed to find catalog information from this URL.</string>
    <string name="add_catalog_hint">Add new custom OPDS catalog manually</string>
    <string name="add_new_bookmark">Add new bookmark</string>
    <string name="add_to_desktop">Add to Home Screen</string>
    <string name="add_to_favorites">Add to My Favorites</string>
    <string name="adjust_fontsize_by_side">Swipe right edge of screen to adjust font size</string>
    <string name="after_open_book">After open a book:</string>
    <string name="align_justified">Justified Alignment</string>
    <string name="all_books">All Bookmarks</string>
    <string name="allow_scroll_horizontally">Allow fling horizontally to turn page</string>
    <string name="alltime">All</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="annotation">Note</string>
    <string name="app">App</string>
    <string name="app_name">iMD</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arbitrary_order_support_hint">Arbitrary order supports Sort By Book Title only, doesn\'t support current sort type.</string>
    <string name="asia_language">East-Asian Language Alignment</string>
    <string name="ask_upzipfile">Do you want to upzip this file?</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auto">Auto</string>
    <string name="auto_import_new_books">Import new books in main folder automatically</string>
    <string name="auto_scroll_control">Auto Scroll:</string>
    <string name="auto_scroll_move_hint">Tip: move vertically to adjust scroll speed, move horizontally to cancel scroll.</string>
    <string name="auto_theme">Automatic day night mode switch</string>
    <string name="auto_theme_option1">Enable time</string>
    <string name="auto_theme_option2">New brightness</string>
    <string name="auto_theme_tip1">Condition: previous reading was at night</string>
    <string name="auto_theme_tip2">Condition: resume reading</string>
    <string name="available_formats">Available formats:</string>
    <string name="back_key">Back Key</string>
    <string name="background_color">Background Color</string>
    <string name="background_colorv">Background Color</string>
    <string name="background_image">Background Image</string>
    <string name="background_imagev">Background Image</string>
    <string name="backup">Backup</string>
    <string name="backup_failed">Backup Failed</string>
    <string name="backup_folder">Backup to:</string>
    <string name="backup_in_wifi">Backup in WiFi only</string>
    <string name="backup_reading_files">Backup book file to Dropbox (/Apps/Books)</string>
    <string name="backup_succes">Backup successfully</string>
    <string name="backup_to">Backup To:</string>
    <string name="bluelight_filter">Bluelight filter for eye care</string>
    <string name="bluelight_filter_enabled">Bluelight filter enabled.</string>
    <string name="bluelight_filter_opacity">Opacity</string>
    <string name="bold">Bold</string>
    <string name="book_author">Book Author:</string>
    <string name="book_cover">Book Cover</string>
    <string name="book_description">Description:</string>
    <string name="book_edit">Edit Book Information</string>
    <string name="book_favorite">Favorite:</string>
    <string name="book_favorite_hint">Category (Optional)</string>
    <string name="book_found">Search Results:</string>
    <string name="book_info">Book information</string>
    <string name="book_information">Book Information</string>
    <string name="book_labels">Labels</string>
    <string name="book_name">Book name(Empty for all, support wildcard):</string>
    <string name="book_shelf_options">Bookshelf:</string>
    <string name="book_tags">Tags:</string>
    <string name="book_title">Book Title:</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_manually">Edit bookmark name before create</string>
    <string name="books_on_shelf">Books On Shelf</string>
    <string name="books_only_option">Search for supported books only</string>
    <string name="bottom_margin">Bottom Margin</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_top">Bottom to Top</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness">Brightness:</string>
    <string name="brightness_edge">Adjust brightness at</string>
    <string name="bug_report">Bug report</string>
    <string name="button_autoscroll">Autoscroll</string>
    <string name="button_bookmarks">Bookmarks</string>
    <string name="button_brightness">Brightness</string>
    <string name="button_chapters">Chapters</string>
    <string name="button_daynight">Day/Night Mode</string>
    <string name="button_fontsize">Font Size</string>
    <string name="button_options">Options</string>
    <string name="button_orientation">Screen Orientation</string>
    <string name="button_search">Search</string>
    <string name="button_selecttext">Text Selection</string>
    <string name="button_shutdown">Shutdown</string>
    <string name="button_speak">Speak</string>
    <string name="buy_pro_version">Buy Pro Version</string>
    <string name="calendar">Calendar</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_key">Camera Key</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_copy_between_clouds">Can not copy files between clouds directly, you need to download the files to local firstly, then upload them again.</string>
    <string name="catalog_example">Catalog URL examples:</string>
    <string name="catalog_name">Catalog Name (Optional):</string>
    <string name="catalog_url">Catalog URL:</string>
    <string name="change_cover_hint">Cover Text (Optional)</string>
    <string name="chapter_end">Page down to next</string>
    <string name="chapter_split_hint">Chapter part[%s] end, page down to load next</string>
    <string name="chapters">Chapters</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chars_in_book">Chars in book</string>
    <string name="chinese_fan2jian">Chinese: Traditional-&gt;Simplified</string>
    <string name="chinese_jian2fan">Chinese: Simplified-&gt;Traditional</string>
    <string name="chinese_jian2fan_tip">Use uniform format for all characters.</string>
    <string name="clear_all_statistics">Clear statistics</string>
    <string name="clear_dict_history">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">a7a7399d04c0419d9e3f43b50ee31605</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="highlight">Highlight</string>
    <string name="share">Share</string>
</resources>