<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/bmTabOneBook" android:background="@color/list_dialog_background" android:layout_width="match_parent" android:layout_height="match_parent" android:cacheColorHint="#00000000" android:layout_weight="5">
        <ListView android:id="@+id/bmListView01" android:layout_width="match_parent" android:layout_height="match_parent" android:listSelector="@android:color/transparent" android:cacheColorHint="#00000000" android:divider="#00000000" android:dividerHeight="0dp" android:layout_weight="8"/>
        <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@+id/bk1TypeLay" android:background="#ffaaaaaa" android:paddingLeft="4dp" android:paddingRight="2dp" android:layout_width="match_parent" android:layout_height="32dp">
            <LinearLayout android:id="@+id/exportLay" android:background="@drawable/my_list_selector" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent">
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/bmexportIv" android:paddingTop="2dp" android:paddingBottom="4dp" android:layout_width="24dp" android:layout_height="match_parent" android:src="@drawable/ic_menu_share_v" android:scaleType="fitCenter"/>
                <TextView android:textSize="12sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/bmexport" android:tag="1" android:paddingLeft="4dp" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="8dp" android:text="@string/share"/>
            </LinearLayout>
            <View android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="5"/>
            <LinearLayout android:id="@+id/bookmarkLay" android:background="@drawable/my_list_selector" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent">
                <ImageView android:id="@+id/bookmarkIv" android:layout_width="20dp" android:layout_height="match_parent" android:src="@drawable/bmtag" android:scaleType="fitCenter"/>
                <TextView android:textSize="12sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/bookmarkTv" android:tag="1" android:paddingLeft="4dp" android:paddingRight="8dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/bookmark"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/noteLay" android:background="@drawable/my_list_selector" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent">
                <ImageView android:id="@+id/noteIv" android:layout_width="20dp" android:layout_height="match_parent" android:src="@drawable/bmnote" android:scaleType="fitCenter"/>
                <TextView android:textSize="12sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/noteTv" android:tag="1" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/annotation"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/highlightLay" android:background="@drawable/my_list_selector" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent">
                <ImageView android:id="@+id/highlightIv" android:layout_width="20dp" android:layout_height="match_parent" android:src="@drawable/bmhighlight" android:scaleType="fitCenter"/>
                <TextView android:textSize="12sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/highlightTv" android:tag="1" android:paddingLeft="6dp" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/highlight"/>
            </LinearLayout>
            <TextView android:textSize="12sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/colorTv" android:tag="1" android:background="@drawable/my_list_selector" android:paddingLeft="6dp" android:paddingRight="8dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="&gt;&gt;"/>
        </LinearLayout>
        <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@+id/bk1AddNewLinear" android:background="@color/small_options_top" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageButton android:id="@+id/bookmarkOption" android:background="@drawable/my_about_selector" android:paddingLeft="6dp" android:clickable="true" android:layout_width="56dp" android:layout_height="match_parent" android:src="@drawable/searchoptions" android:scaleType="fitCenter" android:layout_weight="3"/>
            <Button android:textSize="14sp" android:id="@+id/bmAddButton" android:background="@drawable/btn_default_holo_dark2" android:layout_width="match_parent" android:layout_height="38dp" android:text="@string/add_new_bookmark" android:layout_weight="3"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
